2015-07-25  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.2-alpha7 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.2-alpha7 final changes';git push
	git tag -a 4.5.2-alpha7 -m 'Version 4.5.2-alpha7 tag: Generate exact Gaussian grids';git push --tags

	* Gaussian grids now have lat_ctr=Legendre zeros, and lat_ntf that define spherical zones that reproduce Gaussian weights

	* Newton-Raphson iterate latitude interface location to agree with spherical zone area

	* Use Gaussian angles as latitude centers rather than bisecting interfaces

	* Show that SCRIP and NCAR T42 grid/map files accurate to 8 decimal places (NCO to 16)

	* Verify NCO Gaussian weights/angles accuracy to 16 decimal places

2015-07-24  Charlie Zender  <zender@uci.edu>

	* "mask" _is_ the mask for each point, not "whether to mask" each point. Change default from 0 to 1.

	* NCO 4.5.2-alpha6 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.2-alpha6 final changes';git push
	git tag -a 4.5.2-alpha6 -m 'Version 4.5.2-alpha6 tag: create 2D rectangular SCRIP grids';git push --tags

	* Incorporate self-diagnostics (lat_wgt) in nco_grd_mk()

	* Verify ACME FV-scalar SCRIP grids are missing meridional strip next to Greenwich

	* Eliminate GSC gridtype (obscure name for FV-scalar), treat FV	and ngl_eqi_pol identically, leave names distinct

 	* nco_grd_mk() has fancy metadata annotations and generates correct FV-scalar grids

2015-07-23  Charlie Zender  <zender@uci.edu>

	* Hook-up nco_grd_mk() to rgr front-end

2015-07-22  Charlie Zender  <zender@uci.edu>

	* Implement nco_grd_mk() to generate SCRIP grid files

	* NCO 4.5.2-alpha5 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.2-alpha5 final changes';git push
	git tag -a 4.5.2-alpha5 -m 'Version 4.5.2-alpha5 tag: ncra -N, diagnose area if possible when area_out == 0.0 (bilinear interpolation)';git push --tags

	* Diagnose (possibly approximate) area_out when area_out == 0.0	due to bilinear remapping
