@@ -674,7 +674,8 @@ nco1122. cnk slowdown Barry McInnes 3/9
       ncks -O -v huss --cnk_plc=r1d --fl_fmt=netcdf4_classic -L 5 ${DATA}/hdf/huss_Amon_ACCESS1-0_historical_r1i1p1_185001-200512.nc ~/foo.nc # works
 nco1123. ESGF access
       ncks -M http://esgf-data2.ceda.ac.uk/thredds/dodsC/cmip5.output1.MOHC.HadGEM2-ES.rcp85.mon.ocean.Omon.r1i1p1.uo.20111014.aggregation.1
-nco1124. 
+nco1124. ncra fix ncra --wgt_nm to work (i.e., correctly normalize) with missing values
+nco1125. 
 qrk
 ************************************************************************
 End ncoXXX TODOs
